--- a/b-notes/package.json
+++ b/b-notes/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "notes",
+  "name": "b-notes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-native-firebase/app": "^12.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^5.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
