--- a/b-notes/package.json
+++ b/b-notes/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.6.7",
+    "firebase": "^8.6.8",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
     "react-scripts": "4.0.3",
+    "reactfire": "^3.0.0-rc.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
