--- a/b-notes/package.json
+++ b/b-notes/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "reactfire": "^3.0.0-rc.0",
     "web-vitals": "^1.1.2"
